<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/PaddedFullScreenContainer"
    android:orientation="vertical"
    tools:context=".NewPswdActivity" >

    <ImageView
		style="@style/DoorImageQuestionMark"
        android:src="@drawable/ic_question_mark" />

    <EditText
        style="@style/EditText"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <TextView
        style="@style/BasicButton"
        android:layout_marginTop="25dp"
        android:onClick="clickSend"
        android:text="@string/send_pswd" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:text="@string/pswd_search" />
    </FrameLayout>

</LinearLayout>