<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp" >

        <ImageView
            android:id="@+id/image_user_info_picture"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_default" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/text_user_info_name"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:textSize="15sp"
                android:textStyle="bold" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:paddingLeft="10dp" >

                <TextView
                    android:id="@+id/text_user_info_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/background_button_dark"
                    android:clickable="true"
                    android:onClick="call"
                    android:padding="2dp"
                    android:textColor="@color/white" />
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/text_user_info_birth"
            style="@style/TextItem"
            android:text="@string/birth_year" />

        <TextView
            android:id="@+id/text_user_info_position"
            style="@style/TextItem"
            android:text="@string/position" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/text_user_info_physical"
            style="@style/TextItem"
            android:text="@string/physical" />

        <TextView
            android:id="@+id/text_user_info_mainfoot"
            style="@style/TextItem"
            android:text="@string/main_foot" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/text_user_info_location"
            style="@style/TextItem"
            android:text="@string/location" />

        <TextView
            android:id="@+id/text_user_info_occupation"
            style="@style/TextItem"
            android:text="@string/occupation" />
    </LinearLayout>

</LinearLayout>