<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background_dim"
    android:paddingBottom="15dp"
    android:paddingLeft="15dp"
    android:paddingRight="15dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_post_comment_writer"
        android:padding="10dp" >

        <ImageView
            android:id="@+id/image_post_show_user_pic"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="top"
            android:layout_marginTop="3dp"
            android:contentDescription="@string/profile_picture"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_default" />

        <EditText
            android:id="@+id/edit_post_show_comment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:background="@drawable/background_input_box"
            android:gravity="top"
            android:hint="@string/input_comment"
            android:inputType="textMultiLine"
            android:padding="3dp" />

        <TextView
            android:id="@+id/image_post_show_add_comment"
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:layout_gravity="top"
            android:background="@drawable/background_small_button"
            android:clickable="true"
            android:gravity="center_vertical|center_horizontal"
            android:includeFontPadding="false"
            android:onClick="addComment"
            android:text="@string/confirm"
            android:textColor="@color/white" />
    </LinearLayout>

</FrameLayout>